[insert-qr] Fix zoom and scrollbar

--- a/sdkjs-plugins/content/insertQR/resources/style.css
+++ b/sdkjs-plugins/content/insertQR/resources/style.css
@@ -1,6 +1,11 @@
 body {
     margin: 0;
+}
+
+.container {
     padding: 15px;
+    height: calc(100vh - 30px);
+    overflow-y: auto;
 }
 
 label {
